deploy: 6c20fd42168e3a20d05639951b240cae8c08fe10

--- a/annotated.html
+++ b/annotated.html
@@ -50,6 +50,7 @@
       <div class="m-col-l-10 m-push-l-1">
         <h1>Classes</h1>
         <ul class="m-doc">
+          <li>namespace <a href="namespace_0d0.html" class="m-doc">@0</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classArclight.html" class="m-doc">Arclight</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classArclightShot.html" class="m-doc">ArclightShot</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classArclightShotExplosion.html" class="m-doc">ArclightShotExplosion</a> <span class="m-doc"><span></span></span></li>
@@ -67,7 +68,7 @@
           <li>class <a href="classMech.html" class="m-doc">Mech</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMeleeWeapon.html" class="m-doc">MeleeWeapon</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMeltingPoint.html" class="m-doc">MeltingPoint</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classMeltingPointMultiWeapon.html" class="m-doc">MeltingPointMultiWeapon</a> <span class="m-doc"><span></span></span></li>
+          <li>class <a href="classMeltingPointLaser.html" class="m-doc">MeltingPointLaser</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMeltingPointSpawnerWeapon.html" class="m-doc">MeltingPointSpawnerWeapon</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMeltingPointUnit.html" class="m-doc">MeltingPointUnit</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMyTimer.html" class="m-doc">MyTimer</a> <span class="m-doc"><span></span></span></li>
