--- a/classArclight.html
+++ b/classArclight.html
@@ -78,13 +78,17 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a399fa578d4172026122ea1a784946f5c">
-              <span class="m-doc-wrap-bumper"><a href="#a399fa578d4172026122ea1a784946f5c" class="m-doc-self">Arclight</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              <a href="classItem.html" class="m-doc">Item</a>* _item,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="a8d4b9f7ccf978147a744b873abf322b4">
+              <span class="m-doc-wrap-bumper"><a href="#a8d4b9f7ccf978147a744b873abf322b4" class="m-doc-self">Arclight</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              <a href="classItem.html" class="m-doc">Item</a>* itemArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a25e19b50d3f597b0048baa1bd685d665">
+              <span class="m-doc-wrap-bumper"><a href="#a25e19b50d3f597b0048baa1bd685d665" class="m-doc-self">~Arclight</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
