--- a/classArclightShot.html
+++ b/classArclightShot.html
@@ -78,13 +78,17 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a43e923ab46feda3e66f15cf3bdc219bf">
-              <span class="m-doc-wrap-bumper"><a href="#a43e923ab46feda3e66f15cf3bdc219bf" class="m-doc-self">ArclightShot</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              <a href="classItem.html" class="m-doc">Item</a>* _item,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="a8caee7e4b3c03589d7f971a33fb2829e">
+              <span class="m-doc-wrap-bumper"><a href="#a8caee7e4b3c03589d7f971a33fb2829e" class="m-doc-self">ArclightShot</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              <a href="classItem.html" class="m-doc">Item</a>* itemArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a980ade047599046b8967109682e44466">
+              <span class="m-doc-wrap-bumper"><a href="#a980ade047599046b8967109682e44466" class="m-doc-self">~ArclightShot</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
