--- a/classArclightShotExplosion.html
+++ b/classArclightShotExplosion.html
@@ -78,9 +78,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a693d3e54bcb9cd8bb7c97a5b6802a1f3">
-              <span class="m-doc-wrap-bumper"><a href="#a693d3e54bcb9cd8bb7c97a5b6802a1f3" class="m-doc-self">ArclightShotExplosion</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="af107bb244a4a2c5296dadb16e1c6f9d7">
+              <span class="m-doc-wrap-bumper"><a href="#af107bb244a4a2c5296dadb16e1c6f9d7" class="m-doc-self">ArclightShotExplosion</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="abf67b058335114094fa2e161f6565f34">
+              <span class="m-doc-wrap-bumper"><a href="#abf67b058335114094fa2e161f6565f34" class="m-doc-self">~ArclightShotExplosion</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
