--- a/classArclightUnit.html
+++ b/classArclightUnit.html
@@ -78,12 +78,16 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="ac17dcee0bdcc91d4d7386b656c472ea1">
-              <span class="m-doc-wrap-bumper"><a href="#ac17dcee0bdcc91d4d7386b656c472ea1" class="m-doc-self">ArclightUnit</a>(</span><span class="m-doc-wrap">Eigen::Vector2i _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="a6efd80e5a92044d10a24eb992ad026eb">
+              <span class="m-doc-wrap-bumper"><a href="#a6efd80e5a92044d10a24eb992ad026eb" class="m-doc-self">ArclightUnit</a>(</span><span class="m-doc-wrap">Eigen::Vector2i positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="abfbb6c0392b5b7d204be5852e56c3670">
+              <span class="m-doc-wrap-bumper"><a href="#abfbb6c0392b5b7d204be5852e56c3670" class="m-doc-self">~ArclightUnit</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -95,8 +99,8 @@
               <span class="m-doc-wrap-bumper">auto <a href="#aa69e53766d494f43f308948ce78f5cbd" class="m-doc-self">getCount</a>(</span><span class="m-doc-wrap">) -&gt; int <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a60e054689a776dc271a0e9d6e338de9c">
-              <span class="m-doc-wrap-bumper">auto <a href="#a60e054689a776dc271a0e9d6e338de9c" class="m-doc-self">makeMech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position) -&gt; <a href="classMech.html" class="m-doc">Mech</a>* <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="af1663b2e368cfd30f506de3334b37058">
+              <span class="m-doc-wrap-bumper">auto <a href="#af1663b2e368cfd30f506de3334b37058" class="m-doc-self">makeMech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg) -&gt; <a href="classMech.html" class="m-doc">Mech</a>* <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
             <dt id="ab0e3ffb4f955ac15a4abe90be38c57ce">
