--- a/classArclightWeapon.html
+++ b/classArclightWeapon.html
@@ -78,9 +78,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a9e7026d6db0dc86d78c6a484e75ecf89">
-              <span class="m-doc-wrap-bumper"><a href="#a9e7026d6db0dc86d78c6a484e75ecf89" class="m-doc-self">ArclightWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="a7095f7d6c1bbf08ee0ed646635e74a40">
+              <span class="m-doc-wrap-bumper"><a href="#a7095f7d6c1bbf08ee0ed646635e74a40" class="m-doc-self">ArclightWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="af2af800e949fbb41ec2d3aab2ffe9e8e">
+              <span class="m-doc-wrap-bumper"><a href="#af2af800e949fbb41ec2d3aab2ffe9e8e" class="m-doc-self">~ArclightWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
