--- a/classBoard.html
+++ b/classBoard.html
@@ -69,8 +69,12 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a17fad7ed4e3c87d135bb7f34f6e5b8cf">
-              <span class="m-doc-wrap-bumper"><a href="#a17fad7ed4e3c87d135bb7f34f6e5b8cf" class="m-doc-self">Board</a>(</span><span class="m-doc-wrap">bool check) <span class="m-label m-flat m-info">explicit</span> </span>
+            <dt id="a9ee491d4fea680cf69b033374a9fdfcb">
+              <span class="m-doc-wrap-bumper"><a href="#a9ee491d4fea680cf69b033374a9fdfcb" class="m-doc-self">Board</a>(</span><span class="m-doc-wrap">)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="af73f45730119a1fd8f6670f53f959e68">
+              <span class="m-doc-wrap-bumper"><a href="#af73f45730119a1fd8f6670f53f959e68" class="m-doc-self">~Board</a>(</span><span class="m-doc-wrap">)</span>
             </dt>
             <dd><span></span></dd>
           </dl>
