--- a/classCrawler.html
+++ b/classCrawler.html
@@ -78,13 +78,17 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a1238140141501d47ed68d73369ea0720">
-              <span class="m-doc-wrap-bumper"><a href="#a1238140141501d47ed68d73369ea0720" class="m-doc-self">Crawler</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              <a href="classItem.html" class="m-doc">Item</a>* _item,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="a5f34f1b9491e596ac5ba1d00d78fcf88">
+              <span class="m-doc-wrap-bumper"><a href="#a5f34f1b9491e596ac5ba1d00d78fcf88" class="m-doc-self">Crawler</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              <a href="classItem.html" class="m-doc">Item</a>* itemArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a3daf096e55f15a513688ef0f9c2f86f8">
+              <span class="m-doc-wrap-bumper"><a href="#a3daf096e55f15a513688ef0f9c2f86f8" class="m-doc-self">~Crawler</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
