--- a/classCrawlerWeapon.html
+++ b/classCrawlerWeapon.html
@@ -78,9 +78,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a9c6cbcd219b133a6ae26f80e7752ab68">
-              <span class="m-doc-wrap-bumper"><a href="#a9c6cbcd219b133a6ae26f80e7752ab68" class="m-doc-self">CrawlerWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="a9ff2838d0ee9aaa10c7023fb889530e5">
+              <span class="m-doc-wrap-bumper"><a href="#a9ff2838d0ee9aaa10c7023fb889530e5" class="m-doc-self">CrawlerWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a1f240eee20fac749b0d70e1faf175f63">
+              <span class="m-doc-wrap-bumper"><a href="#a1f240eee20fac749b0d70e1faf175f63" class="m-doc-self">~CrawlerWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
