--- a/classLaserWeapon.html
+++ b/classLaserWeapon.html
@@ -81,7 +81,7 @@
           <h2><a href="#derived-classes">Derived classes</a></h2>
           <dl class="m-doc">
             <dt>
-              class <a href="classMeltingPointMultiWeapon.html" class="m-doc">MeltingPointMultiWeapon</a>
+              class <a href="classMeltingPointLaser.html" class="m-doc">MeltingPointLaser</a>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -89,13 +89,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a55f9ec569203e91353eeb4a73f0c9caa">
-              <span class="m-doc-wrap-bumper"><a href="#a55f9ec569203e91353eeb4a73f0c9caa" class="m-doc-self">LaserWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="adfba154686a03a17260ffd67cba10cf2">
+              <span class="m-doc-wrap-bumper"><a href="#adfba154686a03a17260ffd67cba10cf2" class="m-doc-self">LaserWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a21949f73a0fd0d077b13e72d84b4fb9e">
-              <span class="m-doc-wrap-bumper"><a href="#a21949f73a0fd0d077b13e72d84b4fb9e" class="m-doc-self">~LaserWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">virtual</span></span>
+            <dt id="a31d6f65b092e5b8b810c720ce6f51870">
+              <span class="m-doc-wrap-bumper"><a href="#a31d6f65b092e5b8b810c720ce6f51870" class="m-doc-self">~LaserWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
