--- a/classMech.html
+++ b/classMech.html
@@ -91,17 +91,17 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a8674ea3587d1339ddef24b7abd874c15">
-              <span class="m-doc-wrap-bumper"><a href="#a8674ea3587d1339ddef24b7abd874c15" class="m-doc-self">Mech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              <a href="classItem.html" class="m-doc">Item</a>* _item,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="a7fd4664eb61c51b7a5353d83a1695800">
+              <span class="m-doc-wrap-bumper"><a href="#a7fd4664eb61c51b7a5353d83a1695800" class="m-doc-self">Mech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              <a href="classItem.html" class="m-doc">Item</a>* itemArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a8214b4f377b97b64c8d93a248bc21460">
-              <span class="m-doc-wrap-bumper"><a href="#a8214b4f377b97b64c8d93a248bc21460" class="m-doc-self">~Mech</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">virtual</span></span>
+            <dt id="a21a062e38a881f1cde0bb7a3cc6f788a">
+              <span class="m-doc-wrap-bumper"><a href="#a21a062e38a881f1cde0bb7a3cc6f788a" class="m-doc-self">~Mech</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-warning">virtual</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -188,7 +188,7 @@
             </dt>
             <dd><span></span></dd>
             <dt id="a1dca4ab4a6dffbf28ed7fd8a453d9b39">
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> <a href="#a1dca4ab4a6dffbf28ed7fd8a453d9b39" class="m-doc-self">team</a>
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> <a href="#a1dca4ab4a6dffbf28ed7fd8a453d9b39" class="m-doc-self">team</a>
             </dt>
             <dd><span></span></dd>
             <dt id="a2eaef0792d56fbd5f117746704cf48fc">
