--- a/classMeleeWeapon.html
+++ b/classMeleeWeapon.html
@@ -89,13 +89,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a35cde5d4aa4dbbd00f8445a191b6daa5">
-              <span class="m-doc-wrap-bumper"><a href="#a35cde5d4aa4dbbd00f8445a191b6daa5" class="m-doc-self">MeleeWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="a178484e3a280fc812424d6fc1cf9b4ea">
+              <span class="m-doc-wrap-bumper"><a href="#a178484e3a280fc812424d6fc1cf9b4ea" class="m-doc-self">MeleeWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="ac5974f066c78f21e2b49e5919517474c">
-              <span class="m-doc-wrap-bumper"><a href="#ac5974f066c78f21e2b49e5919517474c" class="m-doc-self">~MeleeWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">virtual</span></span>
+            <dt id="a319ae7dcbb10c7253c543eb55f26fd7b">
+              <span class="m-doc-wrap-bumper"><a href="#a319ae7dcbb10c7253c543eb55f26fd7b" class="m-doc-self">~MeleeWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
