--- a/classMeltingPoint.html
+++ b/classMeltingPoint.html
@@ -78,13 +78,17 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="aaba9b1b060871a19a610d750193bc2b1">
-              <span class="m-doc-wrap-bumper"><a href="#aaba9b1b060871a19a610d750193bc2b1" class="m-doc-self">MeltingPoint</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              <a href="classItem.html" class="m-doc">Item</a>* _item,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="aad777ff355e3578e5cc12a4e8f12547f">
+              <span class="m-doc-wrap-bumper"><a href="#aad777ff355e3578e5cc12a4e8f12547f" class="m-doc-self">MeltingPoint</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              <a href="classItem.html" class="m-doc">Item</a>* itemArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="aae2ec091249c235575ca5d962e24a7d8">
+              <span class="m-doc-wrap-bumper"><a href="#aae2ec091249c235575ca5d962e24a7d8" class="m-doc-self">~MeltingPoint</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
