--- a/classMeltingPointSpawnerWeapon.html
+++ b/classMeltingPointSpawnerWeapon.html
@@ -78,9 +78,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a1f8cbb249a7ec6f62c6cde0e0cb25990">
-              <span class="m-doc-wrap-bumper"><a href="#a1f8cbb249a7ec6f62c6cde0e0cb25990" class="m-doc-self">MeltingPointSpawnerWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="ab73f9a3b1c43993764bd72f128686bb4">
+              <span class="m-doc-wrap-bumper"><a href="#ab73f9a3b1c43993764bd72f128686bb4" class="m-doc-self">MeltingPointSpawnerWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a22fa9a10083e410a421e456b5e56f345">
+              <span class="m-doc-wrap-bumper"><a href="#a22fa9a10083e410a421e456b5e56f345" class="m-doc-self">~MeltingPointSpawnerWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
