--- a/classMeltingPointUnit.html
+++ b/classMeltingPointUnit.html
@@ -78,12 +78,16 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a809a73daa4a57de45797e9d84c03eb30">
-              <span class="m-doc-wrap-bumper"><a href="#a809a73daa4a57de45797e9d84c03eb30" class="m-doc-self">MeltingPointUnit</a>(</span><span class="m-doc-wrap">Eigen::Vector2i _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="aa1128036c2cab622beb96a9dbc949cac">
+              <span class="m-doc-wrap-bumper"><a href="#aa1128036c2cab622beb96a9dbc949cac" class="m-doc-self">MeltingPointUnit</a>(</span><span class="m-doc-wrap">Eigen::Vector2i positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a943d5bfee2ac5c5faef32c035e6b36b1">
+              <span class="m-doc-wrap-bumper"><a href="#a943d5bfee2ac5c5faef32c035e6b36b1" class="m-doc-self">~MeltingPointUnit</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -95,8 +99,8 @@
               <span class="m-doc-wrap-bumper">auto <a href="#ae210031e8916186e8b575764d2f1dd55" class="m-doc-self">getCount</a>(</span><span class="m-doc-wrap">) -&gt; int <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="afe431d998e2e532622f36e903f827eb2">
-              <span class="m-doc-wrap-bumper">auto <a href="#afe431d998e2e532622f36e903f827eb2" class="m-doc-self">makeMech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position) -&gt; <a href="classMech.html" class="m-doc">Mech</a>* <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="aef24a755e39c0dc7494b21f32fed15f3">
+              <span class="m-doc-wrap-bumper">auto <a href="#aef24a755e39c0dc7494b21f32fed15f3" class="m-doc-self">makeMech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg) -&gt; <a href="classMech.html" class="m-doc">Mech</a>* <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
             <dt id="ac48f74970ec545b2c4e48ae92f32b93c">
