--- a/classMyTimer.html
+++ b/classMyTimer.html
@@ -69,8 +69,8 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="ac540c22ac85c096c0ef714437639942e">
-              <span class="m-doc-wrap-bumper"><a href="#ac540c22ac85c096c0ef714437639942e" class="m-doc-self">MyTimer</a>(</span><span class="m-doc-wrap">int _timeMax)</span>
+            <dt id="a67b01ca7d1b7c580b25a11199f350d5d">
+              <span class="m-doc-wrap-bumper"><a href="#a67b01ca7d1b7c580b25a11199f350d5d" class="m-doc-self">MyTimer</a>(</span><span class="m-doc-wrap">int timeMaxArg) <span class="m-label m-flat m-info">explicit</span> </span>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -91,12 +91,12 @@
         <section id="pub-attribs">
           <h2><a href="#pub-attribs">Public variables</a></h2>
           <dl class="m-doc">
-            <dt id="a21d1e8f6681362926d029b2bf3236ba9">
-              bool <a href="#a21d1e8f6681362926d029b2bf3236ba9" class="m-doc-self">done</a>
-            </dt>
-            <dd><span></span></dd>
             <dt id="a8999c2da522dbd81fe368171892c6baf">
               int <a href="#a8999c2da522dbd81fe368171892c6baf" class="m-doc-self">timeMax</a>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a21d1e8f6681362926d029b2bf3236ba9">
+              bool <a href="#a21d1e8f6681362926d029b2bf3236ba9" class="m-doc-self">done</a>
             </dt>
             <dd><span></span></dd>
             <dt id="ab028badc3b64c6b6e7203b301c7042c2">
