--- a/classSpawnerWeapon.html
+++ b/classSpawnerWeapon.html
@@ -93,13 +93,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a7e3c5e7abad51f1c3af82495d3341a01">
-              <span class="m-doc-wrap-bumper"><a href="#a7e3c5e7abad51f1c3af82495d3341a01" class="m-doc-self">SpawnerWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="a7a70ca84cdbfe3c09725220c3ad03317">
+              <span class="m-doc-wrap-bumper"><a href="#a7a70ca84cdbfe3c09725220c3ad03317" class="m-doc-self">SpawnerWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a6d4da24a0149bdd7fb98aee76d8efe4e">
-              <span class="m-doc-wrap-bumper"><a href="#a6d4da24a0149bdd7fb98aee76d8efe4e" class="m-doc-self">~SpawnerWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">virtual</span></span>
+            <dt id="a9bb488fa5425f5b8e6a24a2ff8ba3316">
+              <span class="m-doc-wrap-bumper"><a href="#a9bb488fa5425f5b8e6a24a2ff8ba3316" class="m-doc-self">~SpawnerWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
