--- a/classWeapon.html
+++ b/classWeapon.html
@@ -91,9 +91,9 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="afe7ca2d3fb134bf55fd8b0b7238352ef">
-              <span class="m-doc-wrap-bumper"><a href="#afe7ca2d3fb134bf55fd8b0b7238352ef" class="m-doc-self">Weapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="adf8008fad811f22d581522702204181c">
+              <span class="m-doc-wrap-bumper"><a href="#adf8008fad811f22d581522702204181c" class="m-doc-self">Weapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
             </dt>
             <dd><span></span></dd>
             <dt id="af06462587d8fd8878be4af2a2479f9bb">
@@ -142,8 +142,8 @@
               <span class="m-doc-wrap-bumper">auto <a href="#a2e61d09bee5685974a7c5f89331e5b7e" class="m-doc-self">getMechAngle</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mech) -&gt; double</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="ad83a36b366b9d010d7f21cb9fa218526">
-              <span class="m-doc-wrap-bumper">auto <a href="#ad83a36b366b9d010d7f21cb9fa218526" class="m-doc-self">targetExists</a>(</span><span class="m-doc-wrap">) -&gt; bool</span>
+            <dt id="adeca390cda05515e89f0daae1504815a">
+              <span class="m-doc-wrap-bumper">auto <a href="#adeca390cda05515e89f0daae1504815a" class="m-doc-self">targetExists</a>(</span><span class="m-doc-wrap">) const -&gt; bool</span>
             </dt>
             <dd><span></span></dd>
             <dt id="a9fc6eea12ad3bc24d8726e8c052a3cc8">
