--- a/common_8h.html
+++ b/common_8h.html
@@ -79,9 +79,9 @@
         <section id="enum-members">
           <h2><a href="#enum-members">Enums</a></h2>
           <dl class="m-doc">
-            <dt id="a9c13bb5b1d69698f9b47900990eaa598">
-              <span class="m-doc-wrap-bumper">enum <a href="#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc-self">Team</a> { </span><span class="m-doc-wrap"><a href="#a9c13bb5b1d69698f9b47900990eaa598a097bdc2bb8d24f733c06f0be9b66bc3d" class="m-doc">TEAM_RED</a>,
-              <a href="#a9c13bb5b1d69698f9b47900990eaa598aca4c28815fbe8cd09e68f1c0436e8431" class="m-doc">TEAM_GREEN</a> }</span>
+            <dt id="a5c3789295da4aeff0a6f81956c1acd84">
+              <span class="m-doc-wrap-bumper">enum class <a href="#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc-self">Team</a>: std::uint8_t { </span><span class="m-doc-wrap"><a href="#a5c3789295da4aeff0a6f81956c1acd84abda9643ac6601722a28f238714274da4" class="m-doc">red</a>,
+              <a href="#a5c3789295da4aeff0a6f81956c1acd84a9f27410725ab8cc8854a2769c7a516b8" class="m-doc">green</a> }</span>
             </dt>
             <dd><span></span></dd>
           </dl>
