--- a/gui_8cpp.html
+++ b/gui_8cpp.html
@@ -58,38 +58,28 @@
             <li>
               Reference
               <ul>
-                <li><a href="#func-members">Functions</a></li>
-                <li><a href="#define-members">Defines</a></li>
+                <li><a href="#var-members">Variables</a></li>
               </ul>
             </li>
           </ul>
         </div>
-        <section id="func-members">
-          <h2><a href="#func-members">Functions</a></h2>
+        <section id="var-members">
+          <h2><a href="#var-members">Variables</a></h2>
           <dl class="m-doc">
-            <dt id="aa145d691b3c5edcb61e7c0bbd33392c6">
-              <span class="m-doc-wrap-bumper">auto <a href="#aa145d691b3c5edcb61e7c0bbd33392c6" class="m-doc-self">int1</a>(</span><span class="m-doc-wrap">double d) -&gt; int</span>
+            <dt id="ad0b623df52b55918ab57d0b1e77705b0">
+              double <a href="#ad0b623df52b55918ab57d0b1e77705b0" class="m-doc-self">BOARD_X</a> <span class="m-label m-flat m-primary">constexpr</span>
             </dt>
             <dd><span></span></dd>
-          </dl>
-        </section>
-        <section id="define-members">
-          <h2><a href="#define-members">Defines</a></h2>
-          <dl class="m-doc">
-            <dt id="ab2f84c36c2d0595ec55832062bd0ebf2">
-              <span class="m-doc-wrap-bumper">#define <a href="#ab2f84c36c2d0595ec55832062bd0ebf2" class="m-doc-self">BOARD_X</a></span>
+            <dt id="a5cc9bde907ffa5a5ff96eb9be8ff3b86">
+              double <a href="#a5cc9bde907ffa5a5ff96eb9be8ff3b86" class="m-doc-self">BOARD_Y</a> <span class="m-label m-flat m-primary">constexpr</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a22de5dc5f2b1c9d3dfedd2e9b5f83017">
-              <span class="m-doc-wrap-bumper">#define <a href="#a22de5dc5f2b1c9d3dfedd2e9b5f83017" class="m-doc-self">BOARD_Y</a></span>
+            <dt id="a1ef1700c341028f489f4c8dbbfa13a81">
+              double <a href="#a1ef1700c341028f489f4c8dbbfa13a81" class="m-doc-self">BOARD_SIDE</a> <span class="m-label m-flat m-primary">constexpr</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a5dd777929ae6666549fa2f108b7b2556">
-              <span class="m-doc-wrap-bumper">#define <a href="#a5dd777929ae6666549fa2f108b7b2556" class="m-doc-self">BOARD_SIDE</a></span>
-            </dt>
-            <dd><span></span></dd>
-            <dt id="a99528326bf8089b6dc0762d21e240743">
-              <span class="m-doc-wrap-bumper">#define <a href="#a99528326bf8089b6dc0762d21e240743" class="m-doc-self">ZOOM_BOARDER</a></span>
+            <dt id="afdfa8afaf7886b4f6b0ff941b5c2c574">
+              double <a href="#afdfa8afaf7886b4f6b0ff941b5c2c574" class="m-doc-self">ZOOM_BOARDER</a> <span class="m-label m-flat m-primary">constexpr</span>
             </dt>
             <dd><span></span></dd>
           </dl>
