--- a/meltingpoint_8h.html
+++ b/meltingpoint_8h.html
@@ -75,7 +75,7 @@
             </dt>
             <dd><span></span></dd>
             <dt>
-              class <a href="classMeltingPointMultiWeapon.html" class="m-doc">MeltingPointMultiWeapon</a>
+              class <a href="classMeltingPointLaser.html" class="m-doc">MeltingPointLaser</a>
             </dt>
             <dd><span></span></dd>
             <dt>
