--- a/classCrawlerUnit.html
+++ b/classCrawlerUnit.html
@@ -60,7 +60,6 @@
               Reference
               <ul>
                 <li><a href="#base-classes">Base classes</a></li>
-                <li><a href="#pub-static-attribs">Public static variables</a></li>
                 <li><a href="#typeless-methods">Constructors, destructors, conversion operators</a></li>
                 <li><a href="#pub-methods">Public functions</a></li>
               </ul>
@@ -76,28 +75,19 @@
             <dd><span></span></dd>
           </dl>
         </section>
-        <section id="pub-static-attribs">
-          <h2><a href="#pub-static-attribs">Public static variables</a></h2>
-          <dl class="m-doc">
-            <dt id="add0b64b1dca0dcba62d2b63785b8e098">
-              static int <a href="#add0b64b1dca0dcba62d2b63785b8e098" class="m-doc-self">count</a>
-            </dt>
-            <dd><span></span></dd>
-            <dt id="a0cb37169f53c02fd166cde5d29bd1e62">
-              static Eigen::Vector2i <a href="#a0cb37169f53c02fd166cde5d29bd1e62" class="m-doc-self">size</a>
-            </dt>
-            <dd><span></span></dd>
-          </dl>
-        </section>
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a11dbdf7a18d4e268978a6da62119bb16">
-              <span class="m-doc-wrap-bumper"><a href="#a11dbdf7a18d4e268978a6da62119bb16" class="m-doc-self">CrawlerUnit</a>(</span><span class="m-doc-wrap">Eigen::Vector2i _position,
-              <a href="common_8h.html#a9c13bb5b1d69698f9b47900990eaa598" class="m-doc">Team</a> _team,
-              int _lvl,
-              int* _t,
-              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* _mechs)</span>
+            <dt id="a876be3406f93f8ebfb31651e947555b9">
+              <span class="m-doc-wrap-bumper"><a href="#a876be3406f93f8ebfb31651e947555b9" class="m-doc-self">CrawlerUnit</a>(</span><span class="m-doc-wrap">Eigen::Vector2i positionArg,
+              <a href="common_8h.html#a5c3789295da4aeff0a6f81956c1acd84" class="m-doc">Team</a> teamArg,
+              int lvlArg,
+              int* tArg,
+              std::list&lt;<a href="classMech.html" class="m-doc">Mech</a>*&gt;* mechsArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a0889833ba5b420f1038ac0aa624d5053">
+              <span class="m-doc-wrap-bumper"><a href="#a0889833ba5b420f1038ac0aa624d5053" class="m-doc-self">~CrawlerUnit</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -113,8 +103,8 @@
               <span class="m-doc-wrap-bumper">auto <a href="#a1c3079fe385cd2381596c5e208716f49" class="m-doc-self">getBaseSize</a>(</span><span class="m-doc-wrap">) -&gt; Eigen::Vector2i <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a8eb5d1fc8b3e474d38bc66545fa343a7">
-              <span class="m-doc-wrap-bumper">auto <a href="#a8eb5d1fc8b3e474d38bc66545fa343a7" class="m-doc-self">makeMech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d _position) -&gt; <a href="classMech.html" class="m-doc">Mech</a>* <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="a406b3662bcaf097e79061580319975a5">
+              <span class="m-doc-wrap-bumper">auto <a href="#a406b3662bcaf097e79061580319975a5" class="m-doc-self">makeMech</a>(</span><span class="m-doc-wrap">Eigen::Vector2d positionArg) -&gt; <a href="classMech.html" class="m-doc">Mech</a>* <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
