--- a/classExplosionWeapon.html
+++ b/classExplosionWeapon.html
@@ -88,13 +88,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="aa658b1cf6c41b92761165f0d785b3dbe">
-              <span class="m-doc-wrap-bumper"><a href="#aa658b1cf6c41b92761165f0d785b3dbe" class="m-doc-self">ExplosionWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="a36cc5c4cef08113de93d28547393ce9e">
+              <span class="m-doc-wrap-bumper"><a href="#a36cc5c4cef08113de93d28547393ce9e" class="m-doc-self">ExplosionWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="af80f765e36cd000d045a046da980eae6">
-              <span class="m-doc-wrap-bumper"><a href="#af80f765e36cd000d045a046da980eae6" class="m-doc-self">~ExplosionWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">virtual</span></span>
+            <dt id="a5e5e78c1d0aaf90fd0b5b13fb706b8cf">
+              <span class="m-doc-wrap-bumper"><a href="#a5e5e78c1d0aaf90fd0b5b13fb706b8cf" class="m-doc-self">~ExplosionWeapon</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
