--- a/classMeltingPointLaser.html
+++ b/classMeltingPointLaser.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>MeltingPointMultiWeapon class | ebm</title>
+  <title>MeltingPointLaser class | ebm</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i%7CSource+Code+Pro:400,400i,600" />
   <link rel="stylesheet" href="m-dark+documentation.compiled.css" />
   <link rel="icon" href="favicon-dark.png" type="image/png" />
@@ -49,7 +49,7 @@
     <div class="m-row">
       <div class="m-col-l-10 m-push-l-1">
         <h1>
-          MeltingPointMultiWeapon <span class="m-thin">class</span>
+          MeltingPointLaser <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="meltingpoint_8h.html">&lt;meltingpoint.h&gt;</a></div>
         </h1>
         <p><span></span></p>
@@ -78,9 +78,13 @@
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt id="a59471ad15fda9d2f3cb3323040a834c1">
-              <span class="m-doc-wrap-bumper"><a href="#a59471ad15fda9d2f3cb3323040a834c1" class="m-doc-self">MeltingPointMultiWeapon</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* _mech,
-              double _relAngle)</span>
+            <dt id="a5772dd7a05623c22821f0bedb7cb760a">
+              <span class="m-doc-wrap-bumper"><a href="#a5772dd7a05623c22821f0bedb7cb760a" class="m-doc-self">MeltingPointLaser</a>(</span><span class="m-doc-wrap"><a href="classMech.html" class="m-doc">Mech</a>* mechArg,
+              double relAngleArg)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a0a67e514fd505938bdf3e176510da63f">
+              <span class="m-doc-wrap-bumper"><a href="#a0a67e514fd505938bdf3e176510da63f" class="m-doc-self">~MeltingPointLaser</a>(</span><span class="m-doc-wrap">) <span class="m-label m-flat m-info">defaulted</span> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -88,28 +92,28 @@
         <section id="pub-methods">
           <h2><a href="#pub-methods">Public functions</a></h2>
           <dl class="m-doc">
-            <dt id="a218ba780b931cb295ebfb89096a9775f">
-              <span class="m-doc-wrap-bumper">auto <a href="#a218ba780b931cb295ebfb89096a9775f" class="m-doc-self">getRange</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="aad71fbe0a3127b416b60e5a6163cdb15">
+              <span class="m-doc-wrap-bumper">auto <a href="#aad71fbe0a3127b416b60e5a6163cdb15" class="m-doc-self">getRange</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="af09e28d5b36f997fdbaf05a42a33a0b3">
-              <span class="m-doc-wrap-bumper">auto <a href="#af09e28d5b36f997fdbaf05a42a33a0b3" class="m-doc-self">getSplash</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="a64425a2821961d2bf74bd80d9400067c">
+              <span class="m-doc-wrap-bumper">auto <a href="#a64425a2821961d2bf74bd80d9400067c" class="m-doc-self">getSplash</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="aeb21421dd06d90753e12d89fc71776a8">
-              <span class="m-doc-wrap-bumper">auto <a href="#aeb21421dd06d90753e12d89fc71776a8" class="m-doc-self">getAttack</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="a4a633069be7e835a75e9512af99d0e8a">
+              <span class="m-doc-wrap-bumper">auto <a href="#a4a633069be7e835a75e9512af99d0e8a" class="m-doc-self">getAttack</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a0d22b10b8fa1d957a5556a42eadfea05">
-              <span class="m-doc-wrap-bumper">auto <a href="#a0d22b10b8fa1d957a5556a42eadfea05" class="m-doc-self">getChargeRate</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="ab241ed8b6bc1e05846ee17d0d0320cc7">
+              <span class="m-doc-wrap-bumper">auto <a href="#ab241ed8b6bc1e05846ee17d0d0320cc7" class="m-doc-self">getChargeRate</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="afadb2072b9cdb5fb8ec312ae19262711">
-              <span class="m-doc-wrap-bumper">auto <a href="#afadb2072b9cdb5fb8ec312ae19262711" class="m-doc-self">getRadius</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="a8aaaae61feec875a959e999100737b2b">
+              <span class="m-doc-wrap-bumper">auto <a href="#a8aaaae61feec875a959e999100737b2b" class="m-doc-self">getRadius</a>(</span><span class="m-doc-wrap">) -&gt; double <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a7fd9fa8693a817efcefdf8dfe4be49c9">
-              <span class="m-doc-wrap-bumper">auto <a href="#a7fd9fa8693a817efcefdf8dfe4be49c9" class="m-doc-self">getHack</a>(</span><span class="m-doc-wrap">) -&gt; bool <span class="m-label m-flat m-warning">override</span></span>
+            <dt id="ace5cfa0ce0e977837ba7cfd42e5178cb">
+              <span class="m-doc-wrap-bumper">auto <a href="#ace5cfa0ce0e977837ba7cfd42e5178cb" class="m-doc-self">getHack</a>(</span><span class="m-doc-wrap">) -&gt; bool <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
