--- a/namespaces.html
+++ b/namespaces.html
@@ -50,6 +50,7 @@
       <div class="m-col-l-10 m-push-l-1">
         <h1>Namespaces</h1>
         <ul class="m-doc">
+          <li>namespace <a href="namespace_0d0.html" class="m-doc">@0</a> <span class="m-doc"><span></span></span></li>
         </ul>
         <script>
         function toggle(e) {
